[project]
name = "doc-crawl"
version = "0.1.0"
description = "Crawl login-protected pages with Crawl4AI and save them as Markdown."
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.8.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
