[project]
name = "doc-crawl"
version = "0.1.0"
description = "Crawl login-protected pages with Playwright and convert rendered HTML with Docling."
requires-python = ">=3.10"
dependencies = [
    "docling>=2.94.0",
    "httpx>=0.28.0",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
